--- a/package.json
+++ b/package.json
@@ -6,16 +6,22 @@
   "scripts": {
     "build": "tsc",
     "start": "node ./dist/index.js",
+    "build:start": "npm run build && npm start",
     "watch": " tsc -w & nodemon ./dist/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^8.5.2",
     "gdax": "github:coinbase/gdax-node",
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
-    "socket.io": "^2.0.4"
+    "rxjs": "^5.5.6",
+    "socket.io": "^2.0.4",
+    "uuid": "^3.1.0"
+  },
+  "devDependencies": {
+    "@types/node": "^8.5.2",
+    "@types/rx": "^4.1.1"
   }
 }
