--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
       "outDir": "dist",
       "sourceMap": true,
       "lib": [
-          "es2015"
+          "es2015",
+          "dom"
       ]
     },
     "include": [
