--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "start": "node ./dist/index.js",
     "build:start": "npm run build && npm start",
-    "watch": " tsc -w & nodemon ./dist/index.js"
+    "watch": "tsc-watch --onSuccess \"nodemon dist/index.js\""
   },
   "keywords": [],
   "author": "",
@@ -22,6 +22,8 @@
   },
   "devDependencies": {
     "@types/node": "^8.5.2",
-    "@types/rx": "^4.1.1"
+    "@types/rx": "^4.1.1",
+    "concurrently": "^3.5.1",
+    "tsc-watch": "^1.0.13"
   }
 }
