--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
       ]
     },
     "include": [
-      "src/**/*.ts"
+      "src/**/*.ts",
+      "src/**/*.json"
     ],
     "exclude": [
       "node_modules"
