feat(trader): add accounts balance retrieve

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,10 +10,10 @@
       ]
     },
     "include": [
-      "src/**/*.ts",
-      "src/**/*.json"
+      "src/**/*.ts"
     ],
     "exclude": [
-      "node_modules"
+      "node_modules",
+      "dist"
     ]
   }
