--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "start": "node ./dist/index.js",
     "build:start": "npm run build && npm start",
-    "watch": "tsc-watch --onSuccess \"nodemon dist/index.js\""
+    "watch": "tsc-watch --onSuccess \"nodemon --verbose dist/index.js\""
   },
   "keywords": [],
   "author": "",
