--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "gdax": "github:coinbase/gdax-node",
+    "gdax": "^0.5.1",
     "rxjs": "^5.5.6",
     "sleep": "^5.1.1"
   },
