--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "gdax": "^0.5.1",
+    "node-binance-api": "^0.4.6",
     "rxjs": "^5.5.6",
     "sleep": "^5.1.1"
   },
