--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "delay": "^2.0.0",
     "gdax": "^0.5.1",
     "node-binance-api": "^0.4.6",
-    "rxjs": "^5.5.6",
-    "sleep": "^5.1.1"
+    "rxjs": "^5.5.6"
   },
   "devDependencies": {
     "@types/node": "^8.5.2",
