--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bot",
-  "version": "0.2.5",
+  "version": "0.2.6",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -15,6 +15,9 @@
   "dependencies": {
     "delay": "^2.0.0",
     "gdax": "^0.5.1",
+    "jsoncomp": "^1.6.1",
+    "jsoncompress": "^0.1.3",
+    "lzwcompress": "^0.2.4",
     "node-binance-api": "^0.4.8",
     "rxjs": "^5.5.6"
   },
