--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "delay": "^2.0.0",
     "gdax": "^0.5.1",
     "node-binance-api": "^0.4.8",
-    "rxjs": "^5.5.6"
+    "rxjs": "^5.5.6",
+    "slack-webhook": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "^8.5.2",
