--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "bot",
-  "version": "0.3.3",
+  "version": "0.3.4",
   "description": "",
   "main": "index.js",
   "scripts": {
     "build": "tsc",
     "start": "node ./dist/index.js",
     "build:start": "npm run build && npm start",
+    "chart": "lite-server",
     "watch": "tsc-watch --onSuccess \"nodemon -w dist/ dist/index.js\""
   },
   "keywords": [],
