--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "bot",
-  "version": "0.3.4",
+  "version": "0.3.5",
   "description": "",
   "main": "index.js",
   "scripts": {
     "build": "tsc",
+    "docker:build": "docker build -t theddy .",
+    "docker:run": "docker run -it --env-file envfile -p 3000:3000 theddy",
     "start": "node ./dist/index.js",
     "build:start": "npm run build && npm start",
     "chart": "lite-server",
