--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bot",
-  "version": "0.3.5",
+  "version": "0.3.6",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -9,6 +9,7 @@
     "docker:run": "docker run -it --env-file envfile -p 3000:3000 theddy",
     "start": "node ./dist/index.js",
     "build:start": "npm run build && npm start",
+    "build:start:scratch": "rm -f data.json && npm run build:start",
     "chart": "lite-server",
     "watch": "tsc-watch --onSuccess \"nodemon -w dist/ dist/index.js\""
   },
